--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#0d47a1</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorBlueBg">#042964</color>
+    <color name="colorBlueBg">#2c3f5f</color>
 </resources>
